log
Wed 20 Mar 2024 08:20:29 PM UTC: 
 tests:  0|5
total_score: 0/70
16022e4
Wed 20 Mar 2024 08:23:43 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:29: error: passing argument 1 of ‘strlen’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   57 |   for(int i = 0; i < strlen(L) + 1; i++)
      |                             ^
      |                             |
      |                             List *
In file included from test.c:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:407:35: note: expected ‘const char *’ but argument is of type ‘List *’
  407 | extern size_t strlen (const char *__s)
      |                       ~~~~~~~~~~~~^~~
In file included from test.c:5:
exercises.c:59:16: error: invalid use of undefined type ‘struct List’
   59 |       suma += L[i];
      |                ^
exercises.c:59:15: error: invalid use of incomplete typedef ‘List’
   59 |       suma += L[i];
      |               ^
cc1: all warnings being treated as errors
Compilation failed
0bd53c9
Wed 20 Mar 2024 08:24:20 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:16: error: invalid use of undefined type ‘struct List’
   60 |       suma += L[i];
      |                ^
exercises.c:60:15: error: invalid use of incomplete typedef ‘List’
   60 |       suma += L[i];
      |               ^
Compilation failed
2bc814e
Wed 20 Mar 2024 08:24:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:17: error: invalid use of undefined type ‘struct List’
   60 |       suma += *L[i];
      |                 ^
exercises.c:60:16: error: invalid use of incomplete typedef ‘List’
   60 |       suma += *L[i];
      |                ^
Compilation failed
d44fd40
Wed 20 Mar 2024 08:25:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:16: error: invalid use of undefined type ‘struct List’
   60 |       suma += L[i];
      |                ^
exercises.c:60:15: error: invalid use of incomplete typedef ‘List’
   60 |       suma += L[i];
      |               ^
Compilation failed
bfcccb1
Wed 20 Mar 2024 08:27:55 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:23: error: invalid use of incomplete typedef ‘List’
   57 |   int size = get_size(*L);
      |                       ^~
exercises.c:59:17: error: invalid use of undefined type ‘struct List’
   59 |       suma += *L[i];
      |                 ^
exercises.c:59:16: error: invalid use of incomplete typedef ‘List’
   59 |       suma += *L[i];
      |                ^
Compilation failed
24092d9
Wed 20 Mar 2024 08:28:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:23: error: invalid use of incomplete typedef ‘List’
   57 |   int size = get_size(*L);
      |                       ^~
exercises.c:59:16: error: invalid use of undefined type ‘struct List’
   59 |       suma += L[i];
      |                ^
exercises.c:59:15: error: invalid use of incomplete typedef ‘List’
   59 |       suma += L[i];
      |               ^
Compilation failed
1af441c
Wed 20 Mar 2024 08:31:47 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   63 |       *dato = next(L);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
8508250
Wed 20 Mar 2024 08:32:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0e5dd9b
Wed 20 Mar 2024 08:37:03 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f174f74
Wed 20 Mar 2024 08:42:25 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:90:9: error: invalid use of undefined type ‘struct List’
   90 |     if(L[i] == elem)
      |         ^
exercises.c:90:8: error: invalid use of incomplete typedef ‘List’
   90 |     if(L[i] == elem)
      |        ^
exercises.c:92:18: error: invalid use of undefined type ‘struct List’
   92 |       current = L[i];
      |                  ^
exercises.c:92:17: error: invalid use of incomplete typedef ‘List’
   92 |       current = L[i];
      |                 ^
exercises.c:93:7: error: too many arguments to function ‘popCurrent’
   93 |       popCurrent(L, current);
      |       ^~~~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
5ff1ffe
Wed 20 Mar 2024 08:51:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:90:9: error: invalid use of undefined type ‘struct List’
   90 |     if(L[i] == elem)
      |         ^
exercises.c:90:8: error: invalid use of incomplete typedef ‘List’
   90 |     if(L[i] == elem)
      |        ^
exercises.c:92:18: error: invalid use of undefined type ‘struct List’
   92 |       current = L[i];
      |                  ^
exercises.c:92:17: error: invalid use of incomplete typedef ‘List’
   92 |       current = L[i];
      |                 ^
exercises.c:93:18: error: invalid use of incomplete typedef ‘List’
   93 |       popCurrent(*L);
      |                  ^~
exercises.c:87:7: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   87 |   int current;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc0c014
